// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditSubtraction /> should render 1`] = `
<ModalDialog
  headerText="Edit Subtraction"
  label="SubtractionEdit"
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<EditSubtraction /> should render after name is changed 1`] = `
<ModalDialog
  headerText="Edit Subtraction"
  label="SubtractionEdit"
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<EditSubtraction /> should render after name is changed 2`] = `
<ModalDialog
  headerText="Edit Subtraction"
  label="SubtractionEdit"
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Foo"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<EditSubtraction /> should render after nickname is changed 1`] = `
<ModalDialog
  headerText="Edit Subtraction"
  label="SubtractionEdit"
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<EditSubtraction /> should render after nickname is changed 2`] = `
<ModalDialog
  headerText="Edit Subtraction"
  label="SubtractionEdit"
  onHide={[MockFunction]}
  show={true}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Foo"
        />
      </InputGroup>
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;

exports[`<EditSubtraction /> should render when [show=false] 1`] = `
<ModalDialog
  headerText="Edit Subtraction"
  label="SubtractionEdit"
  onHide={[MockFunction]}
  show={false}
>
  <form
    onSubmit={[Function]}
  >
    <Modal__DialogBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__DialogBody>
    <Modal__DialogFooter>
      <SaveButton
        pullRight={true}
      />
    </Modal__DialogFooter>
  </form>
</ModalDialog>
`;
